# atlas-python-sdk

./: .gitattributes  .gitignore  ReadMe.Md  git_memo.md  memo_for_dev.md  pyproject.toml
.devcontainer/: .env  Dockerfile.work  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  merge-to-main.yml
atlas/: atlas.py  core.py
atlas/config/: settings.py  utils.py
atlas/data/versions/v4.4.0/: casestudy_vector.avro  technique_vector.avro
atlas/data/versions/v4.4.0/yaml/: techniques.yaml
atlas/data/versions/v4.5.0/: casestudy_vector.avro  technique_vector.avro
atlas/data/versions/v4.5.0/yaml/: techniques.yaml
atlas/data/versions/v4.6.0/: casestudy_vector.avro  technique_vector.avro
atlas/data/versions/v4.7.0/: atlas-mitigations-addressed-techniques.csv  atlas-mitigations.csv  atlas-tactics.csv  atlas-techniques.csv  casestudy_vector.avro  technique_vector.avro
atlas/data/versions/v4.7.0/yaml/: techniques.yaml
atlas/data/versions/v4.8.0/: atlas-mitigations-addressed-techniques.csv  atlas-mitigations.csv  atlas-tactics.csv  atlas-techniques.csv  technique_vector.avro
atlas/data/versions/v4.9.0/: technique_vector.avro
atlas/data/versions/v5.0.0/: technique_vector.avro
atlas/data/versions/v5.1.0/: technique_vector.avro
atlas/data/versions/v5.2.0/: technique_vector.avro
atlas/data/versions/v5.3.0/: technique_vector.avro
atlas/data/versions/v5.4.0/: technique_vector.avro
atlas/entities/: __init__.py  casestudy.py  mitigation.py  tactic.py  technique.py
test/: manual_test1.py  test1.py  test_atlas_additional.py  test_atlas_basic.py  test_demo.py
