[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
atlas = ["data/**/*"]

[tool.setuptools.packages.find]
include = ["atlas"]

[project]
name = "atlas"
version = "0.5.0"
description = "atlasデータにpythonで簡単にアクセスするためのライブラリです。"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
dependencies = [
  "chromadb",
  "openai>=0.8.0",
  "platformdirs>=4.3.7",
  "polars",
  "pydantic-settings>=2.12.0",
]
